Crash on call to vlc_ml_media_generate_thumbnail

Call is vlc_ml_media_generate_thumbnail(_p_libraryInstance, mediaId, VLC_ML_THUMBNAIL_SMALL, 512, 512, 0.15)

Crash is caused by a failing assert in vlc_atomic.h:68:5:

   65  	{
   66  	    uintptr_t prev = atomic_fetch_sub_explicit(&rc->refs, (uintptr_t)1,
   67  	                                               memory_order_acq_rel);
-> 68  	    vlc_assert(prev);
   69  	    return prev == 1;
   70  	}

Backtrace:

    frame #0: 0x000000018b1721b0 libsystem_kernel.dylib`__pthread_kill + 8
    frame #1: 0x000000018b1a8cec libsystem_pthread.dylib`pthread_kill + 288
    frame #2: 0x000000018b0e22c8 libsystem_c.dylib`abort + 180
    frame #3: 0x000000018b0e1620 libsystem_c.dylib`__assert_rtn + 272
  * frame #4: 0x000000010660e4b4 libmedialibrary_plugin.dylib`vlc_atomic_rc_dec(rc=0x000000010580ff08) at vlc_atomic.h:68:5
    frame #5: 0x000000010660e43c libmedialibrary_plugin.dylib`picture_Release(picture=0x000000010580fd90) at vlc_picture.h:376:9
    frame #6: 0x000000010660e3fc libmedialibrary_plugin.dylib`Thumbnailer::ThumbnailerCtx::~ThumbnailerCtx(this=0x000000017161ed40) at medialibrary.h:124:17
    frame #7: 0x000000010660e074 libmedialibrary_plugin.dylib`Thumbnailer::ThumbnailerCtx::~ThumbnailerCtx(this=0x000000017161ed40) at medialibrary.h:122:9
    frame #8: 0x000000010660dcfc libmedialibrary_plugin.dylib`Thumbnailer::generate(this=0x0000600002903c08, (null)=0x0000000100268d18, mrl="file:///Users/claucambra/Desktop/Desktop%20-%20Claudio%E2%80%99s%20MacBook%20Air/Screen%20Recording%202022-06-20%20at%2023.42.16.mov", desiredWidth=512, desiredHeight=512, position=0.150000006, dest="/Users/claucambra/Library/Application Support/org.videolan.vlc/ml/mlstorage/thumbnails/3410.jpg") at Thumbnailer.cpp:98:1
    frame #9: 0x000000010672f938 libmedialibrary_plugin.dylib`medialibrary::ThumbnailerWorker::generateThumbnail(this=0x0000600003d07570, task=Task @ 0x000000017161eee8) at ThumbnailerWorker.cpp:272:23 [opt]
    frame #10: 0x000000010672ef40 libmedialibrary_plugin.dylib`medialibrary::ThumbnailerWorker::run(this=0x0000600003d07570) at ThumbnailerWorker.cpp:186:24 [opt]
    frame #11: 0x0000000106730ae0 libmedialibrary_plugin.dylib`void* std::__1::__thread_proxy<std::__1::tuple<std::__1::unique_ptr<std::__1::__thread_struct, std::__1::default_delete<std::__1::__thread_struct> >, void (medialibrary::ThumbnailerWorker::*)(), medialibrary::ThumbnailerWorker*> >(void*) [inlined] decltype(__f=0x000060000021ab48, __a0=0x000060000021ab58)).*fp()) std::__1::__invoke<void (medialibrary::ThumbnailerWorker::*)(), medialibrary::ThumbnailerWorker*, void>(void (medialibrary::ThumbnailerWorker::*&&)(), medialibrary::ThumbnailerWorker*&&) at type_traits:3859:1 [opt]
    frame #12: 0x0000000106730ac4 libmedialibrary_plugin.dylib`void* std::__1::__thread_proxy<std::__1::tuple<std::__1::unique_ptr<std::__1::__thread_struct, std::__1::default_delete<std::__1::__thread_struct> >, void (medialibrary::ThumbnailerWorker::*)(), medialibrary::ThumbnailerWorker*> >(void*) [inlined] void std::__1::__thread_execute<std::__1::unique_ptr<std::__1::__thread_struct, std::__1::default_delete<std::__1::__thread_struct> >, void (medialibrary::ThumbnailerWorker::*)(), medialibrary::ThumbnailerWorker*, 2ul>(__t=size=3, (null)=<unavailable>)(), medialibrary::ThumbnailerWorker*>&, std::__1::__tuple_indices<2ul>) at thread:287:5 [opt]
    frame #13: 0x0000000106730ac4 libmedialibrary_plugin.dylib`void* std::__1::__thread_proxy<std::__1::tuple<std::__1::unique_ptr<std::__1::__thread_struct, std::__1::default_delete<std::__1::__thread_struct> >, void (medialibrary::ThumbnailerWorker::*)(), medialibrary::ThumbnailerWorker*> >(__vp=0x000060000021ab40) at thread:298:5 [opt]
    frame #14: 0x000000018b1a906c libsystem_pthread.dylib`_pthread_start + 148

Version: master, macOS 13.0